[gd_scene load_steps=8 format=3 uid="uid://cgvngah40k2v1"]

[ext_resource type="PackedScene" uid="uid://dpx63pigio2ff" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://y07dgnjxwcqju" path="res://WorldMap.gd" id="2_qe77o"]
[ext_resource type="Script" path="res://Main.gd" id="3_main_script"]
[ext_resource type="Script" path="res://TilePalette.gd" id="4_tile_palette"]
[ext_resource type="Script" path="res://WorldObjects.gd" id="5_world_objects"]
[ext_resource type="Script" path="res://ObjectPalette.gd" id="6_object_palette"]
[ext_resource type="Texture2D" path="res://ui/loading_screen.png" id="7_loading_texture"]

[node name="Main" type="Node2D"]
position = Vector2(763, 421)
script = ExtResource("3_main_script")

[node name="WorldMap" type="TileMap" parent="."]
z_index = -1
script = ExtResource("2_qe77o")
player_path = NodePath("../Player")

[node name="WorldObjects" type="TileMap" parent="."]
z_index = 1
script = ExtResource("5_world_objects")
player_path = NodePath("../Player")

[node name="Ui" type="CanvasLayer" parent="."]

[node name="AdminButton" type="Button" parent="Ui"]
offset_left = 16.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 48.0
text = "Админка"

[node name="AdminMenu" type="PanelContainer" parent="Ui"]
visible = false
offset_left = 16.0
offset_top = 16.0
offset_right = 236.0
offset_bottom = 380.0

[node name="AdminVBox" type="VBoxContainer" parent="Ui/AdminMenu"]
offset_left = 8.0
offset_top = 8.0
offset_right = 212.0
offset_bottom = 344.0
theme_override_constants/separation = 6

[node name="AdminMapEditorButton" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Редактор карты"

[node name="AdminObjectEditorButton" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Размещение объектов"

[node name="AdminEmpty2" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Пусто"

[node name="AdminEmpty3" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Пусто"

[node name="AdminEmpty4" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Пусто"

[node name="AdminEmpty5" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Пусто"

[node name="AdminEmpty6" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Пусто"

[node name="AdminEmpty7" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Пусто"

[node name="AdminEmpty8" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Пусто"

[node name="AdminBackButton" type="Button" parent="Ui/AdminMenu/AdminVBox"]
text = "Назад"

[node name="MapEditorPanel" type="PanelContainer" parent="Ui"]
visible = false
offset_left = 260.0
offset_top = 16.0
offset_right = 520.0
offset_bottom = 160.0

[node name="MapEditorVBox" type="VBoxContainer" parent="Ui/MapEditorPanel"]
offset_left = 8.0
offset_top = 8.0
offset_right = 244.0
offset_bottom = 144.0
theme_override_constants/separation = 8

[node name="TilePalette" type="TextureRect" parent="Ui/MapEditorPanel/MapEditorVBox"]
script = ExtResource("4_tile_palette")

[node name="MapEditorActions" type="HBoxContainer" parent="Ui/MapEditorPanel/MapEditorVBox"]
theme_override_constants/separation = 8

[node name="MapEditorSaveButton" type="Button" parent="Ui/MapEditorPanel/MapEditorVBox/MapEditorActions"]
text = "Сохранить"

[node name="MapEditorDeleteButton" type="Button" parent="Ui/MapEditorPanel/MapEditorVBox/MapEditorActions"]
text = "Удалить"

[node name="MapEditorBackButton" type="Button" parent="Ui/MapEditorPanel/MapEditorVBox/MapEditorActions"]
text = "Назад"

[node name="ObjectEditorPanel" type="PanelContainer" parent="Ui"]
visible = false
offset_left = 260.0
offset_top = 176.0
offset_right = 520.0
offset_bottom = 320.0

[node name="ObjectEditorVBox" type="VBoxContainer" parent="Ui/ObjectEditorPanel"]
offset_left = 8.0
offset_top = 8.0
offset_right = 244.0
offset_bottom = 136.0
theme_override_constants/separation = 8

[node name="ObjectPalette" type="TextureRect" parent="Ui/ObjectEditorPanel/ObjectEditorVBox"]
script = ExtResource("6_object_palette")

[node name="ObjectEditorActions" type="HBoxContainer" parent="Ui/ObjectEditorPanel/ObjectEditorVBox"]
theme_override_constants/separation = 8

[node name="ObjectEditorSaveButton" type="Button" parent="Ui/ObjectEditorPanel/ObjectEditorVBox/ObjectEditorActions"]
text = "Сохранить"

[node name="ObjectEditorDeleteButton" type="Button" parent="Ui/ObjectEditorPanel/ObjectEditorVBox/ObjectEditorActions"]
text = "Удалить"

[node name="ObjectEditorBackButton" type="Button" parent="Ui/ObjectEditorPanel/ObjectEditorVBox/ObjectEditorActions"]
text = "Назад"

[node name="PauseOverlay" type="Control" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
mouse_filter = 2

[node name="PauseBackdrop" type="ColorRect" parent="Ui/PauseOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.35)

[node name="PauseCenter" type="CenterContainer" parent="Ui/PauseOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PausePanel" type="PanelContainer" parent="Ui/PauseOverlay/PauseCenter"]
custom_minimum_size = Vector2(320, 0)

[node name="PauseMargin" type="MarginContainer" parent="Ui/PauseOverlay/PauseCenter/PausePanel"]
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PauseVBox" type="VBoxContainer" parent="Ui/PauseOverlay/PauseCenter/PausePanel/PauseMargin"]
alignment = 1
theme_override_constants/separation = 12

[node name="PauseTitle" type="Label" parent="Ui/PauseOverlay/PauseCenter/PausePanel/PauseMargin/PauseVBox"]
text = "Меню"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="ResumeButton" type="Button" parent="Ui/PauseOverlay/PauseCenter/PausePanel/PauseMargin/PauseVBox"]
text = "Продолжить"

[node name="SettingsButton" type="Button" parent="Ui/PauseOverlay/PauseCenter/PausePanel/PauseMargin/PauseVBox"]
text = "Настройки"

[node name="ExitToMenuButton" type="Button" parent="Ui/PauseOverlay/PauseCenter/PausePanel/PauseMargin/PauseVBox"]
text = "Выйти в меню"

[node name="SettingsCenter" type="CenterContainer" parent="Ui/PauseOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="SettingsPanel" type="PanelContainer" parent="Ui/PauseOverlay/SettingsCenter"]
custom_minimum_size = Vector2(640, 0)

[node name="SettingsMargin" type="MarginContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel"]
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SettingsVBox" type="VBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin"]
theme_override_constants/separation = 16

[node name="SettingsTitle" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox"]
text = "Настройки"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="SettingsBody" type="HBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox"]
theme_override_constants/separation = 16

[node name="SettingsMenu" type="VBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody"]
custom_minimum_size = Vector2(160, 0)
theme_override_constants/separation = 8

[node name="VideoButton" type="Button" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsMenu"]
text = "Видео"

[node name="SoundButton" type="Button" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsMenu"]
text = "Звук"

[node name="AuthorsButton" type="Button" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsMenu"]
text = "Авторы"

[node name="SettingsBackButton" type="Button" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsMenu"]
text = "Назад"

[node name="SettingsContent" type="PanelContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody"]
size_flags_horizontal = 3

[node name="ContentMargin" type="MarginContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent"]
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 12

[node name="VideoPanel" type="VBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin"]
theme_override_constants/separation = 12

[node name="VideoTitle" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel"]
text = "Видео"
theme_override_font_sizes/font_size = 18

[node name="ResolutionRow" type="HBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel"]
theme_override_constants/separation = 8

[node name="ResolutionLabel" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel/ResolutionRow"]
text = "Разрешение"

[node name="ResolutionOption" type="OptionButton" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel/ResolutionRow"]
size_flags_horizontal = 3

[node name="ModeRow" type="HBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel"]
theme_override_constants/separation = 8

[node name="ModeLabel" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel/ModeRow"]
text = "Режим"

[node name="ModeOption" type="OptionButton" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel/ModeRow"]
size_flags_horizontal = 3

[node name="VideoNote" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/VideoPanel"]
text = "Полный экран использует размер текущего монитора."

[node name="SoundPanel" type="VBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin"]
visible = false
theme_override_constants/separation = 12

[node name="SoundTitle" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/SoundPanel"]
text = "Звук"
theme_override_font_sizes/font_size = 18

[node name="SoundNote" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/SoundPanel"]
text = "Пока пусто."

[node name="AuthorsPanel" type="VBoxContainer" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin"]
visible = false
theme_override_constants/separation = 12

[node name="AuthorsTitle" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/AuthorsPanel"]
text = "Авторы"
theme_override_font_sizes/font_size = 18

[node name="AuthorsText" type="Label" parent="Ui/PauseOverlay/SettingsCenter/SettingsPanel/SettingsMargin/SettingsVBox/SettingsBody/SettingsContent/ContentMargin/AuthorsPanel"]
text = "Команда Universe Survival."

[node name="LoadingOverlay" type="Control" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LoadingImage" type="TextureRect" parent="Ui/LoadingOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("7_loading_texture")

[node name="LoadingProgress" type="ProgressBar" parent="Ui/LoadingOverlay"]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_right = -48.0
offset_top = -40.0
offset_bottom = -18.0
value = 0.0

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(-189.9254, -91.345856)
